# application/backend/swagger.json
@@ -91,18 +91,6 @@
 				"type": "object",
 				"additionalProperties": false
 			},
-			"_36_Enums.OrganisationType": {
-				"type": "string",
-				"enum": [
-					"INSTITUTION",
-					"COMPANY",
-					"UNIVERSITY",
-					"GOVERNMENT",
-					"NON_PROFIT",
-					"RESEARCH_CENTER",
-					"OTHER"
-				]
-			},
 			"DefaultSelection_Prisma._36_OrganisationPayload_": {
 				"properties": {
 					"updatedAt": {
@@ -112,9 +100,6 @@
 					"createdAt": {
 						"type": "string",
 						"format": "date-time"
-					},
-					"type": {
-						"$ref": "#/components/schemas/_36_Enums.OrganisationType"
 					},
 					"name": {
 						"type": "string"
@@ -127,7 +112,6 @@
 				"required": [
 					"updatedAt",
 					"createdAt",
-					"type",
 					"name",
 					"id"
 				],
@@ -141,9 +125,6 @@
 				"properties": {
 					"name": {
 						"type": "string"
-					},
-					"type": {
-						"$ref": "#/components/schemas/_36_Enums.OrganisationType"
 					}
 				},
 				"required": [
@@ -156,9 +137,6 @@
 				"properties": {
 					"name": {
 						"type": "string"
-					},
-					"type": {
-						"$ref": "#/components/schemas/_36_Enums.OrganisationType"
 					}
 				},
 				"type": "object",
@@ -717,6 +695,162 @@
 					{
 						"in": "path",
 						"name": "orgID",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/organisations/{orgID}/organisations/users": {
+			"get": {
+				"operationId": "GetOrganisationUsers",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"users": {
+											"items": {
+												"$ref": "#/components/schemas/User"
+											},
+											"type": "array",
+											"nullable": true
+										},
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"users",
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					},
+					"404": {
+						"description": "Not Found"
+					},
+					"500": {
+						"description": "Internal Server Error"
+					}
+				},
+				"tags": [
+					"Organisations"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "orgID",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			}
+		},
+		"/organisations/{orgID}/users/{userID}": {
+			"post": {
+				"operationId": "AddUserToOrganisation",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Internal Server Error"
+					}
+				},
+				"tags": [
+					"Organisations"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "orgID",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "path",
+						"name": "userID",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					}
+				]
+			},
+			"delete": {
+				"operationId": "RemoveUserFromOrganisation",
+				"responses": {
+					"200": {
+						"description": "OK",
+						"content": {
+							"application/json": {
+								"schema": {
+									"properties": {
+										"message": {
+											"type": "string"
+										}
+									},
+									"required": [
+										"message"
+									],
+									"type": "object"
+								}
+							}
+						}
+					},
+					"500": {
+						"description": "Internal Server Error"
+					}
+				},
+				"tags": [
+					"Organisations"
+				],
+				"security": [],
+				"parameters": [
+					{
+						"in": "path",
+						"name": "orgID",
+						"required": true,
+						"schema": {
+							"format": "double",
+							"type": "number"
+						}
+					},
+					{
+						"in": "path",
+						"name": "userID",
 						"required": true,
 						"schema": {
 							"format": "double",
